--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="overlay">
 
-    <h1 class="text-center text-info pt-3"> حافظ هيتجوز دعاااء </h1>
+    <h1 class="text-center text-info pt-3"> حافظ هيتجوز الشيماء </h1>
 
     <section class="counter">
 
